# imtool

./: CMakeLists.txt  README.md
common/: CMakeLists.txt  binaryio.cpp  binaryio.hpp  other_2.cpp  progargs.cpp  progargs.hpp
ftest-aos/: ftest-imtool-aos.sh  ftest-imtool-aos.txt
ftest-soa/: ftest-imtool-soa.sh
imagesPPM/compress_output/: deer-small-output-aos.ppm  lake-small-output-aos.ppm  sabatini-output-aos.ppm
imagesPPM/cutfreq_output/: deer-small-output-aos.ppm  lake-small-output-aos.ppm
imagesPPM/maxlevel_output/: deer-small-output-aos.ppm  lake-small-output-aos.ppm
imagesPPM/resize_output/: deer-small-output-aos.ppm  lake-large-output-aos.ppm  lake-small-output-aos.ppm  sabatini-output-aos.ppm
imgaos/: CMakeLists.txt  compress.cpp  compress.hpp  cutfreq.cpp  cutfreq.hpp  imageaos.cpp  imageaos.hpp  maxlevel.cpp  maxlevel.hpp  other2.cpp  resize.cpp  resize.hpp
imgsoa/: CMakeLists.txt  compress.cpp  compress.hpp  cutfreq.cpp  cutfreq.hpp  image.cpp  image.hpp  imagesoa.cpp  imagesoa.hpp  maxlevel.cpp  maxlevel.hpp  resize.cpp  resize.hpp
imtool-aos/: CMakeLists.txt  main.cpp  main.hpp
imtool-soa/: CMakeLists.txt  main.cpp  main.hpp
scriptsInside/: build-Inside.sh  pruebastat-Inside.sh  run-stats.sh
utest-common/: CMakeLists.txt  utest_binaryio.cpp  utest_common.hpp  utest_progargs.cpp
utest-imagsoa/: CMakeLists.txt  utest_compress_soa.cpp  utest_cutfreq_soa.cpp  utest_imagesoa.cpp  utest_maxlevel_soa.cpp  utest_resize_soa.cpp  utest_soa.hpp
utest-imgaos/: CMakeLists.txt  utest_aos.hpp  utest_compress_aos.cpp  utest_cutfreq_aos.cpp  utest_imageaos.cpp  utest_maxlevel_aos.cpp  utest_resize_aos.cpp
